--- a/libs/lib2/src/lib/card/card.component.html
+++ b/libs/lib2/src/lib/card/card.component.html
@@ -3,12 +3,5 @@
     <p class="card-content">
       <ng-content></ng-content>
     </p>
-    <a
-      class="py-sm px-md bg-primary-dark hover:bg-primary text-white flex self-end"
-      href="{{ url }}"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      Show me!
-    </a>
+    <angular-tailwind-nx-button class="flex self-end" [href]="url">Show me!</angular-tailwind-nx-button>
   </div>
